solved remaining issues