@@ -18,6 +18,7 @@ subprojects {
 
     tasks.withType(Test).configureEach {
         useJUnitPlatform()
+        jvmArgs '-XX:+EnableDynamicAgentLoading'
         testLogging {
             events "started", "passed", "skipped", "failed"
             exceptionFormat "full"
